# component-ocr

./: .gitignore  config.py  main.py  pyproject.toml  utils.py
