[project]
name = "component-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "requests>=2.31.0",
    "urllib3<2",
]
